--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img class="logo" src="49ca810f-03d4-4035-9aa2-ed1342ab5fab new.jfif" alt="Logo">
+            <img class="logo" src="5282e093-86d6-4fa8-86e5-9a5252c3f2fdtyy.jfif">
         </div>
         <div class="header">
              Confirmation Ownership
